force-app/main/default/objects/BrillioFC__Tab_Access_Detail__c/BrillioFC__Tab_Access_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Tab Access Detail</label>
    <nameField>
        <label>ForceClinic Tab Access Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Tab Access Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>