force-app/main/default/objects/BrillioFC__Tab_Access_Detail__c/fields/BrillioFC__Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Tab_Name__c</fullName>
    <label>Tab Name</label>
    <referenceTo>BrillioFC__Tab_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Tab Access Details</relationshipLabel>
    <relationshipName>Tab_Access_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>