force-app/main/default/objects/BrillioFC__Tab_Access_Detail__c/fields/BrillioFC__Tab_Visibility__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Tab_Visibility__c</fullName>
    <label>Tab Visibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>